Fix `Header` z-index
Was e.g. below the `Back` button.

--- a/src/shared/components/Header/Header.less
+++ b/src/shared/components/Header/Header.less
@@ -8,8 +8,7 @@
   background-color: @fusion-menu-color;
   position: fixed;
   width: 100%;
-  z-index: 20;
-  // padding-left: 350px;
+  z-index: 9999;
 
   .selectors {
     display: flex;
